# FreeOrBit

./: .gitignore  LICENSE  README.md  Scheme.md  build_capstone_dll_path.py  build_nuitka.ps1  main.py  pyproject.toml  python_script_api.html  python_template.html
examples/: __init__.py  structure_template_example.py
src/freeorbit/: __init__.py  __main__.py  app.py  i18n.py  icon_assets.py  main_window.py  runtime_bootstrap.py
src/freeorbit/commands/: __init__.py  edit_commands.py
src/freeorbit/dialogs/: __init__.py  convert_selection_dialog.py  frida_android_risk_dialog.py  goto_offset_dialog.py  open_disk_dialog.py  open_process_dialog.py  settings_dialog.py
src/freeorbit/model/: __init__.py  binary_data_model.py
src/freeorbit/platform/: __init__.py  android_adb.py  android_frida_install.py  android_settings.py  disk_raw.py  frida_loader.py  win_elevation.py  win_memory.py  win_process_list.py
src/freeorbit/script/: __init__.py  editor_api.py
src/freeorbit/services/: __init__.py  android_debug_window.py  bookmarks.py  byte_tools_dock.py  checksum_dialog.py  compare_view.py  disasm_dock.py  orf_window.py  script_runner.py  search.py
src/freeorbit/template/: __init__.py  auto_template.py  builders.py  builtin_templates.py  fields.py  structure_dock.py
src/freeorbit/ui/: __init__.py  splash_screen.py
src/freeorbit/view/: __init__.py  hex_editor_view.py  hex_format.py
templates/: README.md  example_build_field_tree.py  gif.py  jpeg.py  mp3.py  mp4.py  pdf.py  png.py  webp.py  zip.py
tests/: test_auto_template.py  test_binary_model.py  test_builtin_templates.py  test_field_codec.py  test_hex_format.py  test_search_pattern.py
(+3 files in other folders)
