[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "freeorbit"
version = "1.0.0"
description = "FreeOrBit — 基于 PySide6 的十六进制/二进制编辑器"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
    "QtAwesome>=1.2.0",
    "capstone>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0"]

[project.scripts]
freeorbit = "freeorbit.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
freeorbit = ["resources/*.ico", "resources/templates/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
