[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "freeorbit"
version = "1.0.3"
description = "FreeOrBit — 基于 PySide6 的十六进制/二进制编辑器"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
    "QtAwesome>=1.2.0",
    "capstone>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0"]
# Nuitka 单文件打包：onefile 压缩依赖 zstandard；ordered-set 为 Nuitka 常用依赖；frida 打入 exe 供 Android 面板默认使用
build = ["nuitka>=2.0", "ordered-set", "zstandard", "frida>=16.0.0"]
# Android Frida 面板：需与设备上 frida-server 主版本匹配
android = ["frida>=16.0.0"]

[project.scripts]
freeorbit = "freeorbit.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
freeorbit = ["resources/*.ico", "resources/templates/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
